--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-digital-clock": "^0.1.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-sparklines": "^1.7.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
