--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://PhilippeRoemer.github.io/TabletClock",
+  "homepage": "http://PhilippeRoemer.github.io/CryptoClock",
   "name": "tablet_clock",
   "version": "0.1.0",
   "private": true,
